--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -208,7 +208,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Por fin Welcome to your JBossEWS (Apache/Tomcat) application on OpenShift</h1>
+            <h1>Por fin en GitHub Welcome to your JBossEWS (Apache/Tomcat) application on OpenShift</h1>
           </hgroup>
 
 
